Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn22.60:9.2": "Wie werden Lebewesen aufgrund einer Ursache und Bedingung geläutert?“ ",
   "sn22.60:9.3": "„Mahāli, wenn Form ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn22.60:9.4": "Aber da Form schmerzhaft ist – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, werden die Lebewesen davon ernüchtert. ",
-  "sn22.60:9.5": "Wenn sie ernüchtert sind, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, sind sie geläutert. "
+  "sn22.60:9.5": "Wenn sie ernüchtert sind, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, sind sie geläutert. ",
+  "sn22.60:9.6": "Das ist eine Ursache und Bedingung für die Läuterung der Lebewesen. "
 }
