--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.60:9.6": "Das ist eine Ursache und Bedingung für die Läuterung der Lebewesen. ",
   "sn22.60:9.7": "So werden Lebewesen aufgrund einer Ursache und Bedingung geläutert. ",
   "sn22.60:10.1": "Wenn Gefühl ausschließlich angenehm wäre … ",
-  "sn22.60:10.2": "Wenn Wahrnehmung ausschließlich angenehm wäre … "
+  "sn22.60:10.2": "Wenn Wahrnehmung ausschließlich angenehm wäre … ",
+  "sn22.60:10.3": "Wenn Entscheidungen ausschließlich angenehm wären … "
 }
