Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.60:9.7": "So werden Lebewesen aufgrund einer Ursache und Bedingung geläutert. ",
   "sn22.60:10.1": "Wenn Gefühl ausschließlich angenehm wäre … ",
   "sn22.60:10.2": "Wenn Wahrnehmung ausschließlich angenehm wäre … ",
-  "sn22.60:10.3": "Wenn Entscheidungen ausschließlich angenehm wären … "
+  "sn22.60:10.3": "Wenn Entscheidungen ausschließlich angenehm wären … ",
+  "sn22.60:10.4": "Wenn Bewusstsein ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. "
 }
