--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.60:10.3": "Wenn Entscheidungen ausschließlich angenehm wären … ",
   "sn22.60:10.4": "Wenn Bewusstsein ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn22.60:10.5": "Aber da Bewusstsein schmerzhaft ist – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, werden die Lebewesen davon ernüchtert. ",
-  "sn22.60:10.6": "Wenn sie ernüchtert sind, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, sind sie geläutert. "
+  "sn22.60:10.6": "Wenn sie ernüchtert sind, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, sind sie geläutert. ",
+  "sn22.60:10.7": "Das ist eine Ursache und Bedingung für die Läuterung der Lebewesen. "
 }
