Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -29,7 +29,7 @@
   "sn22.60:8.2": "Aber da Bewusstsein angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, lieben die Lebewesen es. ",
   "sn22.60:8.3": "Da sie es lieben, sind sie daran gebunden und werden so verunreinigt. ",
   "sn22.60:8.4": "Das ist eine Ursache und Bedingung für die Verunreinigung der Lebewesen. ",
-  "sn22.60:8.5": "So werden Lebewesen aufgrund von Ursache und Bedingung verunreinigt.“ ",
+  "sn22.60:8.5": "So werden Lebewesen aufgrund einer Ursache und Bedingung verunreinigt.“ ",
   "sn22.60:9.1": "„Aber Herr, was ist die Ursache und Bedingung für die Läuterung der Lebewesen? ",
   "sn22.60:9.2": "Wie werden Lebewesen aufgrund einer Ursache und Bedingung geläutert?“ ",
   "sn22.60:9.3": "„Mahāli, wenn Form ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. ",
