Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -668,6 +668,7 @@
   "sn-name:667.sn22.58": "Der vollkommen erwachte Buddha ",
   "sn-name:668.sn22.59": "Kennzeichen des Nicht-selbst ",
   "sn-name:669.sn22.60": "Mit Mahāli ",
+  "sn-name:670.sn22.61": "Brennen ",
   "sn-name:671.sn22.62": "Der Geltungsbereich der Sprache ",
   "sn-name:672.sn22-arahantavagga": "Das Kapitel über die Vollendeten ",
   "sn-name:676.sn22.66": "Unbeständigkeit ",
