--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -579,6 +579,7 @@
   "sn-blurbs:sn22.58": "Der Buddha erklärt, dass sowohl er selbst als auch durch Weisheit befreite Mönche und Nonnen durch Nicht-Ergreifen in Bezug auf die Aggregate befreit sind. Dann erklärt er den Unterschied zwischen ihm und diesen befreiten Mönchen und Nonnen. ",
   "sn-blurbs:sn22.59": "Im Wildpark bei Varanasi hält der Buddha vor der Gruppe der fünf Mönche seine berühmte zweite Lehrrede über das Nicht-Selbst in Bezug auf die Aggregate. Am Ende werden alle Vollendete. ",
   "sn-blurbs:sn22.60": "Der Licchaver Mahāli berichtet dem Buddha, dass Pūraṇa Kassapa, der Lehrer einer anderen Sekte, behauptet, Lebewesen seien ohne Grund befleckt oder rein. Der Buddha weist das zurück und erklärt, wie es tatsächlich ist. ",
+  "sn-blurbs:sn22.61": "Die fünf Aggregate brennen. ",
   "sn-blurbs:sn22.62": "Alle Philosophen müssen akzeptieren, dass die fünf Aggregate in einer Sprache beschrieben werden, die sich entweder auf Vergangenheit, Zukunft oder Gegenwart bezieht. ",
   "sn-blurbs:sn22.90": "Nachdem der Buddha auf seinem Sterbebett für ihn eine besondere Strafe angeordnet hat, sucht der Ehrwürdige Channa bei den Mönchen und Nonnen um Unterweisung nach. Als er nicht befriedigt ist, sucht er Ānanda auf, der ihn das an Kaccāyana gerichtete Sutta (SN 12.15) lehrt. ",
   "sn-blurbs:sn23": "Die „Verbundenen Lehrreden mit Rādha“ enthalten 46 Lehrreden mit einem Mönch namens Rādha über das Thema der fünf Aggregate und kann als ein Anhang zum vorigen _Saṁyutta_ betrachtet werden. ",
