--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.61_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.61:0.1": "Verbundene Lehrreden 22. 61 ",
   "sn22.61:0.2": "6. Das Kapitel über Einbindung ",
-  "sn22.61:0.3": "Brennen "
+  "sn22.61:0.3": "Brennen ",
+  "sn22.61:1.1": "In Sāvatthī. "
 }
