--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.61_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.61:0.3": "Brennen ",
   "sn22.61:1.1": "In Sāvatthī. ",
   "sn22.61:1.2": "„Mönche und Nonnen, Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein brennen. ",
-  "sn22.61:1.3": "Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. "
+  "sn22.61:1.3": "Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. ",
+  "sn22.61:1.4": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. "
 }
