--- a/translation/de/sabbamitta/sutta/sn/sn14/sn14.34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn14/sn14.34_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn14.34:3.1": "Wenn das Erdelement ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn14.34:3.2": "Aber da das Erdelement schmerzhaft ist – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, werden die Lebewesen davon ernüchtert. ",
   "sn14.34:4.1": "Wenn das Wasserelement ausschließlich angenehm wäre … ",
-  "sn14.34:4.2": "Wenn das Feuerelement … ",
+  "sn14.34:4.2": "Wenn das Feuerelement ausschließlich angenehm wäre … ",
   "sn14.34:4.3": "Wenn das Luftelement ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn14.34:4.4": "Aber da das Luftelement schmerzhaft ist – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, werden die Lebewesen davon ernüchtert.“ "
 }
