Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -671,6 +671,7 @@
   "sn-name:670.sn22.61": "Brennen ",
   "sn-name:671.sn22.62": "Der Geltungsbereich der Sprache ",
   "sn-name:672.sn22-arahantavagga": "Das Kapitel über die Vollendeten ",
+  "sn-name:673.sn22.63": "Wenn du ergreifst ",
   "sn-name:676.sn22.66": "Unbeständigkeit ",
   "sn-name:677.sn22.67": "Leiden ",
   "sn-name:678.sn22.68": "Nicht-selbst ",
