Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.63:0.1": "Verbundene Lehrreden 22.63 ",
   "sn22.63:0.2": "7. Das Kapitel über die Vollendeten ",
   "sn22.63:0.3": "Wenn du ergreifst ",
-  "sn22.63:1.1": "So habe ich es gehört: "
+  "sn22.63:1.1": "So habe ich es gehört: ",
+  "sn22.63:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. "
 }
