--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.63:1.1": "So habe ich es gehört: ",
   "sn22.63:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "sn22.63:1.3": "Da ging ein Mönch zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
-  "sn22.63:1.4": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ "
+  "sn22.63:1.4": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
+  "sn22.63:1.5": "„Wenn du ergreifst, Mönch, bist du von Māra gebunden. "
 }
