Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.63:1.4": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
   "sn22.63:1.5": "„Wenn du ergreifst, Mönch, bist du von Māra gebunden. ",
   "sn22.63:1.6": "Wenn du nicht ergreifst, bist du von dem Bösen befreit.“ ",
-  "sn22.63:1.7": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ "
+  "sn22.63:1.7": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
+  "sn22.63:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ "
 }
