--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.63:1.5": "„Wenn du ergreifst, Mönch, bist du von Māra gebunden. ",
   "sn22.63:1.6": "Wenn du nicht ergreifst, bist du von dem Bösen befreit.“ ",
   "sn22.63:1.7": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
-  "sn22.63:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ "
+  "sn22.63:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
+  "sn22.63:2.2": "„Herr, wenn man Form ergreift, ist man von Māra gebunden. "
 }
