--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.63:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
   "sn22.63:2.2": "„Herr, wenn man Form ergreift, ist man von Māra gebunden. ",
   "sn22.63:2.3": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
-  "sn22.63:2.4": "Wenn man Gefühl ergreift … "
+  "sn22.63:2.4": "Wenn man Gefühl ergreift … ",
+  "sn22.63:2.6": "Wenn man Wahrnehmung ergreift … "
 }
