Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.63:2.3": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
   "sn22.63:2.4": "Wenn man Gefühl ergreift … ",
   "sn22.63:2.6": "Wenn man Wahrnehmung ergreift … ",
-  "sn22.63:2.7": "Wenn man Entscheidungen ergreift … "
+  "sn22.63:2.7": "Wenn man Entscheidungen ergreift … ",
+  "sn22.63:2.8": "Wenn man Bewusstsein ergreift, ist man von Māra gebunden. "
 }
