Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.63:2.7": "Wenn man Entscheidungen ergreift … ",
   "sn22.63:2.8": "Wenn man Bewusstsein ergreift, ist man von Māra gebunden. ",
   "sn22.63:2.9": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
-  "sn22.63:2.10": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ "
+  "sn22.63:2.10": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
+  "sn22.63:3.1": "„Gut, gut, Mönch! "
 }
