--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.63:2.8": "Wenn man Bewusstsein ergreift, ist man von Māra gebunden. ",
   "sn22.63:2.9": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
   "sn22.63:2.10": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
-  "sn22.63:3.1": "„Gut, gut, Mönch! "
+  "sn22.63:3.1": "„Gut, gut, Mönch! ",
+  "sn22.63:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. "
 }
