Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.63:2.9": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
   "sn22.63:2.10": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
   "sn22.63:3.1": "„Gut, gut, Mönch! ",
-  "sn22.63:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. "
+  "sn22.63:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
+  "sn22.63:3.3": "Wenn man Form ergreift, ist man von Māra gebunden. "
 }
