--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.63:3.1": "„Gut, gut, Mönch! ",
   "sn22.63:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
   "sn22.63:3.3": "Wenn man Form ergreift, ist man von Māra gebunden. ",
-  "sn22.63:3.4": "Wenn man nicht ergreift, ist man von dem Bösen befreit. "
+  "sn22.63:3.4": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
+  "sn22.63:3.5": "Wenn man Gefühl ergreift … "
 }
