Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.63:3.3": "Wenn man Form ergreift, ist man von Māra gebunden. ",
   "sn22.63:3.4": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
   "sn22.63:3.5": "Wenn man Gefühl ergreift … ",
-  "sn22.63:3.6": "Wenn man Wahrnehmung ergreift … "
+  "sn22.63:3.6": "Wenn man Wahrnehmung ergreift … ",
+  "sn22.63:3.7": "Wenn man Entscheidungen ergreift … "
 }
