Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.63:3.5": "Wenn man Gefühl ergreift … ",
   "sn22.63:3.6": "Wenn man Wahrnehmung ergreift … ",
   "sn22.63:3.7": "Wenn man Entscheidungen ergreift … ",
-  "sn22.63:3.8": "Wenn man Bewusstsein ergreift, ist man von Māra gebunden. "
+  "sn22.63:3.8": "Wenn man Bewusstsein ergreift, ist man von Māra gebunden. ",
+  "sn22.63:3.9": "Wenn man nicht ergreift, ist man von dem Bösen befreit. "
 }
