Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.63_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.63:3.7": "Wenn man Entscheidungen ergreift … ",
   "sn22.63:3.8": "Wenn man Bewusstsein ergreift, ist man von Māra gebunden. ",
   "sn22.63:3.9": "Wenn man nicht ergreift, ist man von dem Bösen befreit. ",
-  "sn22.63:3.10": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ "
+  "sn22.63:3.10": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ ",
+  "sn22.63:4.1": "Da begrüßte jener Mönch die Worte des Buddha und stimmte ihm zu. Er erhob sich von seinem Sitz, verbeugte sich, umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und ging. "
 }
