--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.64:0.1": "Verbundene Lehrreden 22.64 "
+  "sn22.64:0.1": "Verbundene Lehrreden 22.64 ",
+  "sn22.64:0.2": "7. Das Kapitel über die Vollendeten "
 }
