--- a/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "mn140:6.7": "„Ja, werter Freund“, antwortete Pukkusāti. ",
   "mn140:6.8": "Der Buddha sagte: ",
   "mn140:7.1": "„‚Dieser Mensch besitzt sechs Elemente, sechs Berührungsfelder, achtzehn Arten des Gedankenkreisens und vier Grundlagen. ",
-  "mn140:7.2": "Wo er auch steht – die Ströme der Einbildung fließen nicht. Und wenn die Ströme der Einbildung nicht fließen, nennt man diesen Menschen einen Abgeklärten, der im Frieden ist. ",
+  "mn140:7.2": "Wo er auch steht – die Ströme des Sichgleichsetzens fließen nicht. Und wenn die Ströme des Sichgleichsetzens nicht fließen, nennt man diesen Menschen einen Abgeklärten, der im Frieden ist. ",
   "mn140:7.3": "Vernachlässige nicht die Weisheit, bewahre die Wahrheit, hege die Großzügigkeit und übe nur für das Ziel des Friedens.‘ ",
   "mn140:7.4": "Das ist der Merksatz für die Aufgliederung der Elemente. ",
   "mn140:8.1": "‚Dieser Mensch besitzt sechs Elemente.‘ ",
