Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
@@ -198,7 +198,7 @@
   "mn140:28.9": "die Befriedung von Gier, Hass und Täuschung. ",
   "mn140:29.1": "‚Vernachlässige nicht die Weisheit, bewahre die Wahrheit, hege die Großzügigkeit und übe nur für das Ziel des Friedens.‘ ",
   "mn140:29.2": "Das habe ich gesagt, und deshalb habe ich es gesagt. ",
-  "mn140:30.1": "‚Wo er auch steht – die Ströme der Einbildung fließen nicht. Und wenn die Ströme der Einbildung nicht fließen, nennt man diesen Menschen einen Abgeklärten, der im Frieden ist.‘ ",
+  "mn140:30.1": "‚Wo er auch steht – die Ströme des Sichgleichsetzens fließen nicht. Und wenn die Ströme des Sichgleichsetzens nicht fließen, nennt man diesen Menschen einen Abgeklärten, der im Frieden ist.‘ ",
   "mn140:30.2": "Das habe ich gesagt, aber weshalb habe ich es gesagt? ",
   "mn140:31.1": "‚Ich bin‘ ist eine Art, sich mit etwas gleichzusetzen; ‚Ich bin das‘, ‚Ich werde sein‘, ‚Ich werde nicht sein‘, ‚Ich werde Form besitzen‘, ‚Ich werde formlos sein‘, ‚Ich werde Wahrnehmung besitzen‘, ‚Ich werde ohne Wahrnehmung sein‘, ‚Ich werde weder Wahrnehmung besitzen noch ohne Wahrnehmung sein‘ – all das sind Arten, sich mit etwas gleichzusetzen. ",
   "mn140:31.2": "Sichgleichsetzen ist eine Krankheit, ein Eiterherd, ein Pfeil. ",
