Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn140_translation-de-sabbamitta.json
@@ -205,7 +205,7 @@
   "mn140:31.3": "Wer über alles Sichgleichsetzen hinausgegangen ist, wird ein Abgeklärter genannt, der im Frieden ist. ",
   "mn140:31.4": "Der Abgeklärte, der im Frieden ist, wird nicht wiedergeboren, altert nicht und stirbt nicht. Er wird nicht erschüttert und sehnt sich nach nichts. ",
   "mn140:31.5": "Denn er hat nichts, das zu Wiedergeburt führen könnte. Wenn er nicht wiedergeboren wird, wie könnte er altern? Wenn er nicht altert, wie könnte er sterben? Wenn er nicht stirbt, wie könnte er erschüttert sein? Wenn er nicht erschüttert ist, wonach könnte er sich sehnen? ",
-  "mn140:32.1": "‚Wo er auch steht – die Ströme der Einbildung fließen nicht. Und wenn die Ströme der Einbildung nicht fließen, nennt man diesen Menschen einen Abgeklärten, der im Frieden ist.‘ ",
+  "mn140:32.1": "‚Wo er auch steht – die Ströme des Sichgleichsetzens fließen nicht. Und wenn die Ströme des Sichgleichsetzens nicht fließen, nennt man diesen Menschen einen Abgeklärten, der im Frieden ist.‘ ",
   "mn140:32.2": "Das habe ich gesagt, und deshalb habe ich es gesagt. ",
   "mn140:32.3": "Mönch, du solltest diese kurze Aufgliederung der sechs Elemente in Erinnerung behalten.“ ",
   "mn140:33.1": "Da dachte der Ehrwürdige Pukkusāti: ",
