--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.64:0.1": "Verbundene Lehrreden 22.64 ",
   "sn22.64:0.2": "7. Das Kapitel über die Vollendeten ",
   "sn22.64:0.3": "Wenn du dich gleichsetzt ",
-  "sn22.64:1.1": "In Sāvatthī. "
+  "sn22.64:1.1": "In Sāvatthī. ",
+  "sn22.64:1.2": "Da ging ein Mönch zum Buddha … und fragte ihn: "
 }
