--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.64:1.1": "In Sāvatthī. ",
   "sn22.64:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: ",
   "sn22.64:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
-  "sn22.64:1.4": "„Wenn du dich gleichsetzt, Mönch, bist du von Māra gebunden. "
+  "sn22.64:1.4": "„Wenn du dich gleichsetzt, Mönch, bist du von Māra gebunden. ",
+  "sn22.64:1.5": "Wenn du dich nicht gleichsetzt, bist du von dem Bösen befreit.“ "
 }
