--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.64:1.5": "Wenn du dich nicht gleichsetzt, bist du von dem Bösen befreit.“ ",
   "sn22.64:1.6": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
   "sn22.64:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
-  "sn22.64:2.2": "„Herr, wenn man sich mit Form gleichsetzt, ist man von Māra gebunden. "
+  "sn22.64:2.2": "„Herr, wenn man sich mit Form gleichsetzt, ist man von Māra gebunden. ",
+  "sn22.64:2.3": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. "
 }
