--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.64:2.2": "„Herr, wenn man sich mit Form gleichsetzt, ist man von Māra gebunden. ",
   "sn22.64:2.3": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. ",
   "sn22.64:2.4": "Wenn man sich mit Gefühl gleichsetzt … ",
-  "sn22.64:2.5": "Wenn man sich mit Wahrnehmung gleichsetzt … "
+  "sn22.64:2.5": "Wenn man sich mit Wahrnehmung gleichsetzt … ",
+  "sn22.64:2.6": "Wenn man sich mit Entscheidungen gleichsetzt … "
 }
