Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.64:2.4": "Wenn man sich mit Gefühl gleichsetzt … ",
   "sn22.64:2.5": "Wenn man sich mit Wahrnehmung gleichsetzt … ",
   "sn22.64:2.6": "Wenn man sich mit Entscheidungen gleichsetzt … ",
-  "sn22.64:2.7": "Wenn man sich mit Bewusstsein gleichsetzt, ist man von Māra gebunden. "
+  "sn22.64:2.7": "Wenn man sich mit Bewusstsein gleichsetzt, ist man von Māra gebunden. ",
+  "sn22.64:2.8": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. "
 }
