Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.64:2.6": "Wenn man sich mit Entscheidungen gleichsetzt … ",
   "sn22.64:2.7": "Wenn man sich mit Bewusstsein gleichsetzt, ist man von Māra gebunden. ",
   "sn22.64:2.8": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. ",
-  "sn22.64:2.9": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ "
+  "sn22.64:2.9": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
+  "sn22.64:3.1": "„Gut, gut, Mönch! "
 }
