--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.64:2.9": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
   "sn22.64:3.1": "„Gut, gut, Mönch! ",
   "sn22.64:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
-  "sn22.64:3.3": "Wenn man sich mit Form gleichsetzt, ist man von Māra gebunden. "
+  "sn22.64:3.3": "Wenn man sich mit Form gleichsetzt, ist man von Māra gebunden. ",
+  "sn22.64:3.4": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. "
 }
