--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.64:3.3": "Wenn man sich mit Form gleichsetzt, ist man von Māra gebunden. ",
   "sn22.64:3.4": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. ",
   "sn22.64:3.5": "Wenn man sich mit Gefühl gleichsetzt … ",
-  "sn22.64:3.6": "Wenn man sich mit Wahrnehmung gleichsetzt … "
+  "sn22.64:3.6": "Wenn man sich mit Wahrnehmung gleichsetzt … ",
+  "sn22.64:3.7": "Wenn man sich mit Entscheidungen gleichsetzt … "
 }
