--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.64:3.5": "Wenn man sich mit Gefühl gleichsetzt … ",
   "sn22.64:3.6": "Wenn man sich mit Wahrnehmung gleichsetzt … ",
   "sn22.64:3.7": "Wenn man sich mit Entscheidungen gleichsetzt … ",
-  "sn22.64:3.8": "Wenn man sich mit Bewusstsein gleichsetzt, ist man von Māra gebunden. "
+  "sn22.64:3.8": "Wenn man sich mit Bewusstsein gleichsetzt, ist man von Māra gebunden. ",
+  "sn22.64:3.9": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. "
 }
