--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.64_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.64:3.6": "Wenn man sich mit Wahrnehmung gleichsetzt … ",
   "sn22.64:3.7": "Wenn man sich mit Entscheidungen gleichsetzt … ",
   "sn22.64:3.8": "Wenn man sich mit Bewusstsein gleichsetzt, ist man von Māra gebunden. ",
-  "sn22.64:3.9": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. "
+  "sn22.64:3.9": "Wenn man sich nicht gleichsetzt, ist man von dem Bösen befreit. ",
+  "sn22.64:3.10": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … "
 }
