--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -673,6 +673,7 @@
   "sn-name:672.sn22-arahantavagga": "Das Kapitel über die Vollendeten ",
   "sn-name:673.sn22.63": "Wenn du ergreifst ",
   "sn-name:674.sn22.64": "Wenn du dich gleichsetzt ",
+  "sn-name:675.sn22.65": "Wenn du Vergnügen findest ",
   "sn-name:676.sn22.66": "Unbeständigkeit ",
   "sn-name:677.sn22.67": "Leiden ",
   "sn-name:678.sn22.68": "Nicht-selbst ",
