--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.65:0.1": "Verbundene Lehrreden 22.65 ",
   "sn22.65:0.2": "7. Das Kapitel über die Vollendeten ",
-  "sn22.65:0.3": "Wenn du Vergnügen findest "
+  "sn22.65:0.3": "Wenn du Vergnügen findest ",
+  "sn22.65:1.1": "In Sāvatthī. "
 }
