--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.65:0.1": "Verbundene Lehrreden 22.65 ",
   "sn22.65:0.2": "7. Das Kapitel über die Vollendeten ",
   "sn22.65:0.3": "Wenn du Vergnügen findest ",
-  "sn22.65:1.1": "In Sāvatthī. "
+  "sn22.65:1.1": "In Sāvatthī. ",
+  "sn22.65:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: "
 }
