--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.65:0.3": "Wenn du Vergnügen findest ",
   "sn22.65:1.1": "In Sāvatthī. ",
   "sn22.65:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: ",
-  "sn22.65:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ "
+  "sn22.65:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
+  "sn22.65:1.4": "„Wenn du Vergnügen findest, Mönch, bist du von Māra gebunden. "
 }
