--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.65:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: ",
   "sn22.65:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
   "sn22.65:1.4": "„Wenn du Vergnügen findest, Mönch, bist du von Māra gebunden. ",
-  "sn22.65:1.5": "Wenn du kein Vergnügen findest, bist du von dem Bösen befreit.“ "
+  "sn22.65:1.5": "Wenn du kein Vergnügen findest, bist du von dem Bösen befreit.“ ",
+  "sn22.65:1.6": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ "
 }
