--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.65:1.6": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
   "sn22.65:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
   "sn22.65:2.2": "„Herr, wenn in Form Vergnügen findet, ist man von Māra gebunden. ",
-  "sn22.65:2.3": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. "
+  "sn22.65:2.3": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. ",
+  "sn22.65:2.4": "Wenn man in Gefühl Vergnügen findet … "
 }
