Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.65:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
   "sn22.65:2.2": "„Herr, wenn in Form Vergnügen findet, ist man von Māra gebunden. ",
   "sn22.65:2.3": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. ",
-  "sn22.65:2.4": "Wenn man in Gefühl Vergnügen findet … "
+  "sn22.65:2.4": "Wenn man in Gefühl Vergnügen findet … ",
+  "sn22.65:2.5": "Wenn man in Wahrnehmung Vergnügen findet … "
 }
