--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.65:2.4": "Wenn man in Gefühl Vergnügen findet … ",
   "sn22.65:2.5": "Wenn man in Wahrnehmung Vergnügen findet … ",
   "sn22.65:2.6": "Wenn man in Entscheidungen Vergnügen findet … ",
-  "sn22.65:2.7": "Wenn in Form Bewusstsein findet, ist man von Māra gebunden. "
+  "sn22.65:2.7": "Wenn in Form Bewusstsein findet, ist man von Māra gebunden. ",
+  "sn22.65:2.8": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. "
 }
