Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.65:2.6": "Wenn man in Entscheidungen Vergnügen findet … ",
   "sn22.65:2.7": "Wenn in Form Bewusstsein findet, ist man von Māra gebunden. ",
   "sn22.65:2.8": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. ",
-  "sn22.65:2.9": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ "
+  "sn22.65:2.9": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
+  "sn22.65:3.1": "„Gut, gut, Mönch! "
 }
