--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.65:2.9": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
   "sn22.65:3.1": "„Gut, gut, Mönch! ",
   "sn22.65:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
-  "sn22.65:3.3": "Wenn man in Form Vergnügen findet, ist man von Māra gebunden. "
+  "sn22.65:3.3": "Wenn man in Form Vergnügen findet, ist man von Māra gebunden. ",
+  "sn22.65:3.4": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. "
 }
