--- a/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp157-166_translation-en-suddhaso.json
@@ -14,7 +14,7 @@
   "dhp159:2": "that one instructs others to act;",
   "dhp159:3": "one who is well-trained can train others -",
   "dhp159:4": "for it is truly hard to train oneself.",
-  "dhp160:1": "One is one's own protector -",
+  "dhp160:1": "One is one’s own protector -",
   "dhp160:2": "how could another protect you?",
   "dhp160:3": "One who has trained oneself well",
   "dhp160:4": "has acquired a protector that is truly hard to acquire.",
@@ -42,8 +42,8 @@
   "dhp165:4": "by oneself one becomes purified;",
   "dhp165:5": "purity and impurity depend on oneself -",
   "dhp165:6": "no one can purify another.",
-  "dhp166:1": "One should not abandon one's own welfare",
+  "dhp166:1": "One should not abandon one’s own welfare",
   "dhp166:2": "for the sake of others, no matter how many;",
-  "dhp166:3": "having understood one's own welfare,",
+  "dhp166:3": "having understood one’s own welfare,",
   "dhp166:4": "one should be intent upon it."
 }
