Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -47,5 +47,6 @@
   "mn3:3.24": "એ શેના માટે?",
   "mn3:3.25": "ભિક્ષુઓ, એવું કરવાથી લાંબા સમય સુધી એ ભિક્ષુને થોડી ઈચ્છાઓ વાળો, સંતુષ્ટ, તપસ્વી, સભર, અને ઉદ્યમશીલ રહેવામાં સહાયતા મળશે.",
   "mn3:3.26": "એટલા માટે ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં.",
-  "mn3:3.27": "મારામાં તમારા માટે એવી અનુકંપા છે:"
+  "mn3:3.27": "મારામાં તમારા માટે એવી અનુકંપા છે:",
+  "mn3:3.28": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’”."
 }
