Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -57,5 +57,6 @@
   "mn3:4.6": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:",
   "mn3:5.1": "“કઇ રીતે એકાંતમાં રહેતા શિક્ષકના સાધકો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા, અને કઇ રીતે સાધકો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે”?",
   "mn3:5.2": "“આદરણીય, આ ભાષણનો અર્થ જાણવા માટે અમે ખુબ દૂરથી પણ સારિપુત્ર પાસે આવીશું.",
-  "mn3:5.3": "આદરણીય સારિપુત્ર પોતેજ આ વિષયની સ્પષ્ટતા કરે તો સારું."
+  "mn3:5.3": "આદરણીય સારિપુત્ર પોતેજ આ વિષયની સ્પષ્ટતા કરે તો સારું.",
+  "mn3:5.4": "જે પ્રમાણે આદરણીય સારિપુત્ર કહેશે એ જ પ્રમાણે ભિક્ષુઓ યાદ રાખશે.”"
 }
