Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1720,7 +1720,7 @@
   "pli-tv-kd1:32.3.40": "He should ask his teacher if he wants water to drink. ",
   "pli-tv-kd1:32.3.41": "If the teacher wants him to recite, he should do so. ",
   "pli-tv-kd1:32.3.42": "If the teacher wants to question him, he should be questioned. ",
-  "pli-tv-kd1:32.3.43": "“If the dwelling where the teacher is staying is dirty, the pupil should clean it if he’s able. ",
+  "pli-tv-kd1:32.3.43": "If the dwelling where the teacher is staying is dirty, the pupil should clean it if he’s able. ",
   "pli-tv-kd1:32.3.44": "When he’s cleaning the dwelling, he should first take out the bowl and robe and put them aside. ",
   "pli-tv-kd1:32.3.45": "He should take out the sitting mat and the sheet and put them aside. ",
   "pli-tv-kd1:32.3.46": "He should take out the mattress and the pillow and put them aside. ",
