Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1949,7 +1949,7 @@
   "pli-tv-kd1:34.1.30": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd1:34.1.31": "And you should dismiss someone who isn’t conducting himself properly. ",
   "pli-tv-kd1:34.1.32": "If you don’t, you commit an offense of wrong conduct. ",
-  "pli-tv-kd1:34.1.33": "“If a pupil has five qualities, he should be dismissed: ",
+  "pli-tv-kd1:34.1.33": "If a pupil has five qualities, he should be dismissed: ",
   "pli-tv-kd1:34.1.34": "He doesn’t have much affection for his teacher; he doesn’t have much confidence in his teacher; he doesn’t have much conscience toward his teacher; he doesn’t have much respect for his teacher; he hasn’t developed his mind much under his teacher. ",
   "pli-tv-kd1:34.1.36": "If a pupil has five qualities, he shouldn’t be dismissed: ",
   "pli-tv-kd1:34.1.37": "He has much affection for his teacher; he has much confidence in his teacher; he has much conscience toward his teacher; he has much respect for his teacher; he has developed his mind much under his teacher. ",
