Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1994,7 +1994,7 @@
   "pli-tv-kd1:36.2.2": "He doesn’t have the virtue, stillness, wisdom, freedom, or knowledge and vision of freedom of one who is fully trained. ",
   "pli-tv-kd1:36.3.1": "But a monk who has five qualities may give the full ordination, give formal support, and have a novice monk attend on him. ",
   "pli-tv-kd1:36.3.2": "He has the virtue, stillness, wisdom, freedom, and knowledge and vision of freedom of one who is fully trained. ",
-  "pli-tv-kd1:36.4.1": "“A monk who has another five qualities shouldn’t give the full ordination, give formal support, or have a novice monk attend on him. ",
+  "pli-tv-kd1:36.4.1": "A monk who has another five qualities shouldn’t give the full ordination, give formal support, or have a novice monk attend on him. ",
   "pli-tv-kd1:36.4.2": "He neither has it himself nor encourages others in the virtue, ",
   "pli-tv-kd1:36.4.3": "stillness, ",
   "pli-tv-kd1:36.4.4": "wisdom, ",
