Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -2107,7 +2107,7 @@
   "pli-tv-kd1:38.4.7": "The Sangha has given so-and-so, who has been a monastic of another religion, four months of probation. ",
   "pli-tv-kd1:38.4.8": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
   "pli-tv-kd1:38.5.1": "",
-  "pli-tv-kd1:38.5.2": "“This is how someone who has been a monastic of another religion fails his probation: ",
+  "pli-tv-kd1:38.5.2": "And this is how someone who has been a monastic of another religion fails his probation: ",
   "pli-tv-kd1:38.5.3": "He enters the village too early and returns too late in the day. ",
   "pli-tv-kd1:38.5.5": "He regularly associates with sex workers, widows, single women, _paṇḍakas_, and nuns. ",
   "pli-tv-kd1:38.6.1": "He’s not skilled or diligent in the various duties of his fellow monastics, and he lacks the proper judgment to organize and perform them well. ",
