Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3005,7 +3005,7 @@
   "pli-tv-kd1:76.3.7": "Their bowl and robes should then be pointed out to them: ",
   "pli-tv-kd1:76.3.8": "ʻThis is your bowl, this your outer robe, this your upper robe, and this your sarong. ",
   "pli-tv-kd1:76.3.9": "Now please go and stand over there.’” ",
-  "pli-tv-kd1:76.4.1": "They were instructed by monks who were ignorant and incompetent. ",
+  "pli-tv-kd1:76.4.1": "Then they were instructed by monks who were ignorant and incompetent. ",
   "pli-tv-kd1:76.4.2": "And because they were badly instructed, they were once again embarrassed, humiliated, and unable to respond. ",
   "pli-tv-kd1:76.4.3": "They told the Buddha. ",
   "pli-tv-kd1:76.4.4": "“A monk who is ignorant and incompetent shouldn’t instruct. ",
