Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3231,7 +3231,7 @@
   "pli-tv-kd1:79.4.23": "Which brings happiness to those who are good, ",
   "pli-tv-kd1:79.4.24": "Restrains those who have bad desires, ",
   "pli-tv-kd1:79.4.25": "And helps those with a sense of conscience; ",
-  "pli-tv-kd1:79.4.26": "Which is for the upkeep of Buddhism, ",
+  "pli-tv-kd1:79.4.26": "And which is for the upkeep of Buddhism, ",
   "pli-tv-kd1:79.4.27": "The sphere of the omniscient Victor, ",
   "pli-tv-kd1:79.4.28": "Not within range of anyone else; ",
   "pli-tv-kd1:79.4.29": "Which is safe, carefully laid down, without doubt—",
