Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3237,9 +3237,9 @@
   "pli-tv-kd1:79.4.29": "Which is safe, carefully laid down, without doubt—",
   "pli-tv-kd1:79.4.30": "That is, the Chapters and the Monastic Law, ",
   "pli-tv-kd1:79.4.31": "The Compendium and the Key Terms—",
-  "pli-tv-kd1:79.4.32": "In this the skilful who does what is beneficial, ",
+  "pli-tv-kd1:79.4.32": "In this the skilful who does what’s beneficial, ",
   "pli-tv-kd1:79.4.33": "Practices wisely. ",
-  "pli-tv-kd1:79.4.34": "One who does not understand cows, ",
+  "pli-tv-kd1:79.4.34": "One who doesn’t understand cattle, ",
   "pli-tv-kd1:79.4.35": "Does not guard the herd; ",
   "pli-tv-kd1:79.4.36": "In the same way, not understanding virtue, ",
   "pli-tv-kd1:79.4.37": "Why would one guard restraint? ",
