Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3240,7 +3240,7 @@
   "pli-tv-kd1:79.4.32": "In this the skilful who does what’s beneficial, ",
   "pli-tv-kd1:79.4.33": "Practices wisely. ",
   "pli-tv-kd1:79.4.34": "One who doesn’t understand cattle, ",
-  "pli-tv-kd1:79.4.35": "Does not guard the herd; ",
+  "pli-tv-kd1:79.4.35": "Doesn’t guard the herd; ",
   "pli-tv-kd1:79.4.36": "In the same way, not understanding virtue, ",
   "pli-tv-kd1:79.4.37": "Why would one guard restraint? ",
   "pli-tv-kd1:79.4.38": "When the discourses are neglected, ",
