Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3243,12 +3243,12 @@
   "pli-tv-kd1:79.4.35": "Doesn’t guard the herd; ",
   "pli-tv-kd1:79.4.36": "In the same way, not understanding virtue, ",
   "pli-tv-kd1:79.4.37": "Why would one guard restraint? ",
-  "pli-tv-kd1:79.4.38": "When the discourses are neglected, ",
+  "pli-tv-kd1:79.4.38": "When the discourses are forgotten, ",
   "pli-tv-kd1:79.4.39": "And the same for philosophy, ",
-  "pli-tv-kd1:79.4.40": "But the Monastic Law is not lost, ",
+  "pli-tv-kd1:79.4.40": "But the Monastic Law isn’t lost, ",
   "pli-tv-kd1:79.4.41": "Then Buddhism still remains. ",
   "pli-tv-kd1:79.4.42": "Therefore, for the purpose of making a collection, ",
-  "pli-tv-kd1:79.4.43": "I will expound the summary, successively, ",
+  "pli-tv-kd1:79.4.43": "I’ll expound the summary, successively, ",
   "pli-tv-kd1:79.4.44": "According to the right method. ",
   "pli-tv-kd1:79.4.45": "Listen to me speak: ",
   "pli-tv-kd1:79.4.46": "Topic, origin story, offense, ",
