Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3253,7 +3253,7 @@
   "pli-tv-kd1:79.4.45": "Listen to me speak: ",
   "pli-tv-kd1:79.4.46": "Topic, origin story, offense, ",
   "pli-tv-kd1:79.4.47": "Method, and repetition. ",
-  "pli-tv-kd1:79.4.48": "It is hard to complete without remainder—",
+  "pli-tv-kd1:79.4.48": "It’s hard to complete without remainder—",
   "pli-tv-kd1:79.4.49": "You should know it from the method.” ",
   "pli-tv-kd1:79.4.50": "“Bodhi tree, and ape-flower tree, ",
   "pli-tv-kd1:79.4.51": "The goatherd’s tree, Sahamapati ",
